JolokiaJmxConnection now batches requests.